--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link">MENU</a>
+    <a href="#menu" class="menu-link"><img src="img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="img/logo.svg" alt="logo"></li>
+          <li><img src="img/logo-color.svg" alt="logo"></li>
           <li><a class="sub-link" href="#">HOME</a></li>
           <li><a class="sub-link" href="#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="#justme">JUST ME</a></li>
@@ -58,8 +58,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/hyvee.html">
-          <h3>Hyvee Floral</h3>
-          <p>Photography, Web, Print</p>
+          <section class="project-info-center">
+            <h3>Hyvee Floral</h3>
+            <hr>
+            <h4>Photography, Web, Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -68,8 +71,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/greasy-garage.html">
-          <h3>Greasy Garage</h3>
-          <p>Identity, Print</p>
+          <section class="project-info-center">
+            <h3>Greasy Garage</h3>
+            <hr>
+            <h4>Identity, Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -78,8 +84,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/shotgun-weddings.html">
-          <h3>Shotgun Weddings</h3>
-          <p>Identity</p>
+          <section class="project-info-center">
+            <h3>Shotgun Weddings</h3>
+            <hr>
+            <h4>Identity</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -88,8 +97,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/monster.html">
-          <h3>Mommy's Little Monster</h3>
-          <p>Identity System, Print</p>
+          <section class="project-info-center">
+            <h3>Mommy's Little Monster</h3>
+            <hr>
+            <h4>Identity System, Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -98,8 +110,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/maroon5.html">
-          <h3>Maroon 5</h3>
-          <p>Print</p>
+          <section class="project-info-center">
+            <h3>Maroon 5</h3>
+            <hr>
+            <h4>Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -108,8 +123,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/heartland.html">
-          <h3>Heartland Autobody</h3>
-          <p>Web</p>
+          <section class="project-info-center">
+            <h3>Heartland Autobody</h3>
+            <hr>
+            <h4>Web</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -118,8 +136,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/starbucks.html">
-          <h3>Starbucks</h3>
-          <p>Photography, Print</p>
+          <section class="project-info-center">
+            <h3>Starbucks</h3>
+            <hr>
+            <h4>Photography, Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -128,8 +149,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/afan.html">
-          <h3>Alliance for the Future of Agriculture in Nebraska</h3>
-          <p>Photography, Print</p>
+          <section class="project-info-center">
+            <h3>Alliance for the Future of <br> Agriculture in Nebraska</h3>
+            <hr>
+            <h4>Photography, Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -138,8 +162,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/pups-paws.html">
-          <h3>Pup's Paws</h3>
-          <p>Package</p>
+          <section class="project-info-center">
+            <h3>Pup's Paws</h3>
+            <hr>
+            <h4>Package</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -148,8 +175,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/pinnacle.html">
-          <h3>Pinnacle Bank Arena</h3>
-          <p>Mobile</p>
+          <section class="project-info-center">
+            <h3>Pinnacle Bank Arena</h3>
+            <hr>
+            <h4>Mobile</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -158,8 +188,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/nra.html">
-          <h3>National Rifle Association</h3>
-          <p>Promotional, Print</p>
+          <section class="project-info-center">
+            <h3>National Rifle Association</h3>
+            <hr>
+            <h4>Promotional, Print</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -168,8 +201,11 @@
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/bebs-jam.html">
-          <h3>Beb's Jam</h3>
-          <p>Package</p>
+          <section class="project-info-center">
+            <h3>Beb's Jam</h3>
+            <hr>
+            <h4>Package</h4>
+          </section>
         </a>
         <img src="img/tree.jpg" alt="tree">
       </div>
@@ -224,14 +260,14 @@
 
         <form>
           <div class="large-6 medium-6 large-offset-1 medium-offset-1 columns contact-form end">
-            <label>E-mail
+            <label><h5>E-mail</h5>
             <input type="text" placeholder="example@example.com" />
             </label>
 
-            <label>How can I help?</label>
+            <label><h5>How can I help?</h5></label>
             <textarea placeholder=""></textarea>
 
-            <a href="#" class="button expand">Submit</a>
+            <a href="#" class="button expand"><h5>Submit</h5></a>
           </div>
         </form>
     </div>
