--- a/projects/afan.html
+++ b/projects/afan.html
@@ -6,6 +6,7 @@
     <title>editionh | Alliance for the Future of Agriculture</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,9 +14,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link">MENU</a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo.svg" alt="logo"></li>
+          <li><img src="../img/logo-color.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -32,13 +33,13 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>ALLIANCE FOR THE FUTURE OF AGRICULTURE IN NEBRASKA (A-FAN)</h2>
+        <h3 id="project-header"><img src="../img/logo.svg">Alliance for the Future of Agriculture in Nebraska (A-FAN)<hr></h2>
       </div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Application:</h5><p>Promotional Booklet (Photography, Print)</p>
+        <h6>Application: </h6><p id="inline-text">Promotional Booklet (Photography, Print)</p>
         <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan’s knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock to males ranging between ages 18 and 28.</p>
       </div>
       </div>
@@ -64,11 +65,11 @@
   </div>
 
 
-<footer class="black">
+<footer>
   <div class="row">
-    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
-    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-4 medium-4 columns">402.641.3518</div>
+    <div class="large-4 medium-4 columns "><p>&copy; Copyright editionh 2014</p></div>
+    <div class="large-4 medium-4 columns"><p>d.n.buchli@hotmail.com</p></div>
+    <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
 
