--- a/index.html
+++ b/index.html
@@ -234,17 +234,22 @@
     </div>
 
 
-    <div class="large-4 medium-4 column clear-padding">
-      <img src="img/tree.jpg" alt="tree">
+  <div class="row">
+    <div class="large-4 medium-4 column clear-padding icons">
+      <img src="img/type-icon.svg" alt="typography">
+      <h5>Typography</h5>
     </div>
 
-    <div class="large-4 medium-4 column clear-padding">
-      <img src="img/tree.jpg" alt="tree">
+    <div class="large-4 medium-4 column clear-padding icons">
+      <img src="img/print-icon.svg" alt="print design">
+      <h5>Print</h5>
     </div>
 
-    <div class="large-4 medium-4 column clear-padding">
-      <img src="img/tree.jpg" alt="tree">
+    <div class="large-4 medium-4 column clear-padding icons">
+      <img src="img/photography-icon.svg" alt="photography">
+      <h5>Photography</h5>
     </div>
+  </div>
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
