--- a/projects/afan.html
+++ b/projects/afan.html
@@ -32,9 +32,14 @@
 
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h3 id="project-header"><img src="../img/logo.svg">Alliance for the Future of Agriculture in Nebraska (A-FAN)<hr></h2>
+      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-10 medium-10 small-12 columns">
+        <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h2>
       </div>
+    </div>
+
+    <div class="row">
+      <div class="large-12 medium-12 columns"><hr></div>
     </div>
 
     <div class="row">
@@ -68,7 +73,7 @@
 <footer>
   <div class="row">
     <div class="large-4 medium-4 columns "><p>&copy; Copyright editionh 2014</p></div>
-    <div class="large-4 medium-4 columns"><p>d.n.buchli@hotmail.com</p></div>
+    <div class="large-4 medium-4 columns"><p>info@dakotahnicole.com</p></div>
     <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
