Updated Project Pages
Brought all project pages up to date (as far as styling headers and
adjusting spacing). Fixed the button for the submit form and applied
button styling for navigation of projects.

--- a/projects/afan.html
+++ b/projects/afan.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
       <div class="large-10 medium-10 small-12 columns">
-        <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h2>
+        <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h3>
       </div>
     </div>
 
@@ -65,8 +65,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 columns medium-6"><a href="starbucks.html">PREVIOUS</a></div>
-    <div class="large-6 columns medium-6"><a href="pups-paws.html">NEXT</a></div>
+    <div class="large-6 medium-6 columns"><a href="starbucks.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="pups-paws.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 
