--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -6,6 +6,7 @@
     <title>editionh | Beb's Jam</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,9 +14,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link">MENU</a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo.svg" alt="logo"></li>
+          <li><img src="../img/logo-color.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -30,15 +31,20 @@
 
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>BEB'S JAM</h2>
+      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-10 medium-10 small-12 columns">
+        <h3 id="project-header">Beb's Jam</h3>
       </div>
     </div>
 
     <div class="row">
+      <div class="large-12 medium-12 columns"><hr></div>
+    </div>
+
+    <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Application:</h5><p>Label Design (Package)</p>
-        <p>Beb's Jam was founded in 2010 by a couple in rural Maine. The business started out as a just a hobby and turned into a full-steam-ahead jam producing operation. They wanted to target couples between ages 25 and 50 who were conscious about their health and were looking for unique flavors of jam. I was able to create a cohesive line of labels that called attention to the rustic home-town of the founding couple.</p>
+        <h6>Application: </h6><p id="inline-text">Label Design (Package)</p>
+        <p>Beb's Jam was founded in 2010 by a couple in rural Maine. The business started out as a just a hobby and turned into a full-steam-ahead jam producing operation. They wanted to target couples between ages 25 and 50 who were conscious about their health and were looking for unique flavors of jam.</p>
       </div>
     </div> 
 
@@ -46,6 +52,7 @@
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
       <img src="../img/tree.jpg" alt="tree">
+      <p>I was able to create a cohesive line of labels that called attention to the rustic home-town of the founding couple.</p>
     </div>
   </div>
 
@@ -54,17 +61,16 @@
       <img src="../img/tree.jpg" alt="tree">
     </div>
   </div>
-
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="nra.html">PREVIOUS</a></div>
-    <div class="large-6 medium-6 columns"><a href="hyvee.html">NEXT</a></div>
+    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
-  <footer class="black">
+  <footer>
   <div class="row">
-    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
-    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-4 medium-4 columns">402.641.3518</div>
+    <div class="large-4 medium-4 columns "><p>&copy; Copyright editionh 2014</p></div>
+    <div class="large-4 medium-4 columns"><p>info@dakotahnicole.com</p></div>
+    <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
 
