--- a/projects/pinnacle.html
+++ b/projects/pinnacle.html
@@ -6,6 +6,7 @@
     <title>editionh | Pinnacle Bank Arena</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -14,9 +15,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link">MENU</a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo.svg" alt="logo"></li>
+          <li><img src="../img/logo-color.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -30,14 +31,19 @@
 <div class="container">
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>PINNACLE BANK ARENA</h2>
+      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-10 medium-10 small-12 columns">
+        <h3 id="project-header">Pinnacle Bank Arena</h3>
       </div>
     </div>
 
     <div class="row">
+      <div class="large-12 medium-12 columns"><hr></div>
+    </div>
+
+    <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Application:</h5><p>Mobile Ticket Application (Mobile)</p>
+        <h6>Application: </h6><p id="inline-text">Mobile Ticket Application (Mobile)</p>
         <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets and a mobile application was the way to go. Generation Y, of whom 60% download mobile applications, is the primary audience for this app.</p>
       </div>
     </div> 
@@ -57,15 +63,15 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="pups-paws.html">PREVIOUS</a></div>
-    <div class="large-6 medium-6 columns"><a href="nra.html">NEXT</a></div>
+    <div class="large-6 medium-6 columns"><a href="pups-paws.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
-<footer class="black">
+<footer>
   <div class="row">
-    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
-    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-4 medium-4 columns">402.641.3518</div>
+    <div class="large-4 medium-4 columns "><p>&copy; Copyright editionh 2014</p></div>
+    <div class="large-4 medium-4 columns"><p>info@dakotahnicole.com</p></div>
+    <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
 
