--- a/projects/pups-paws.html
+++ b/projects/pups-paws.html
@@ -6,6 +6,7 @@
     <title>editionh | Pup's Paws</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,9 +14,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link">MENU</a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo.svg" alt="logo"></li>
+          <li><img src="../img/logo-color.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -30,14 +31,19 @@
 
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>PUP'S PAWS</h2>
+      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-10 medium-10 small-12 columns">
+        <h3 id="project-header">Pup's Paws</h3>
       </div>
     </div>
 
     <div class="row">
+      <div class="large-12 medium-12 columns"><hr></div>
+    </div>
+
+    <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Application:</h5><p>Product Branding and Package Development (Package)</p>
+        <h6>Application: </h6><p id="inline-text">Product Branding and Package Development (Package)</p>
         <p>Founded in a small-town shoppe, Pup’s Paws is a newly emerging dog food and supply company that was looking for an identity and packaging system that better expressed their standards. They were looking to attract health concious Millenials by using a natural process to produce all items and food.</p>
       </div>
     </div> 
@@ -57,15 +63,15 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="afan.html">PREVIOUS</a></div>
-    <div class="large-6 medium-6 columns"><a href="pinnacle.html">NEXT</a></div>
+    <div class="large-6 medium-6 columns"><a href="afan.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
-<footer class="black">
+<footer>
   <div class="row">
-    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
-    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-4 medium-4 columns">402.641.3518</div>
+    <div class="large-4 medium-4 columns "><p>&copy; Copyright editionh 2014</p></div>
+    <div class="large-4 medium-4 columns"><p>info@dakotahnicole.com</p></div>
+    <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
 
