--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -6,6 +7,7 @@
     <title>editionh | Starbucks</title>
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,9 +15,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link">MENU</a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo.svg" alt="logo"></li>
+          <li><img src="../img/logo-color.svg" alt="logo"></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -30,14 +32,19 @@
 
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>STARBUCKS</h2>
+      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-10 medium-10 small-12 columns">
+        <h3 id="project-header">Starbucks</h3>
       </div>
     </div>
 
     <div class="row">
+      <div class="large-12 medium-12 columns"><hr></div>
+    </div>
+
+    <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Application:</h5><p>Annual Report (Photography, Print)</p>
+        <h6>Application: </h6><p id="inline-text">Annual Report (Photography, Print)</p>
         <p>Starbucks, a national coffeehouse chain, was in need of an annual report that reflected the company’s long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40.</p>
       </div>
     </div> 
@@ -57,11 +64,11 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="heartland.html">PREVIOUS</a></div>
-    <div class="large-6 medium-6 columns"><a href="afan.html">NEXT</a></div>
+    <div class="large-6 medium-6 columns"><a href="heartland.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="afan.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
-<footer class="black">
+<footer>
   <div class="row">
     <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
     <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
