Project Pages & Menu
Added images to all product pages except NRA and Beb’s Jam. Checked
content on project pages to be accurate. Began trying to remedy the
optimization issues with images. Styled the off canvas nav.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="row">
       <div class="large-5 medium-5 large-offset-6 medium-offset-6 columns end the-passion">
-        <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—edition<b>h</b>.</p>
       </div>
     </div> 
 
@@ -54,100 +54,8 @@
 
 
 
-  
     <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/hyvee.html">
-          <section class="project-info-center">
-            <h3>Hyvee Floral</h3>
-            <hr>
-            <h4>Photography, Web, Print</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/greasy-garage.html">
-          <section class="project-info-center">
-            <h3>Greasy Garage</h3>
-            <hr>
-            <h4>Identity, Print</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/shotgun-weddings.html">
-          <section class="project-info-center">
-            <h3>Shotgun Weddings</h3>
-            <hr>
-            <h4>Identity</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/monster.html">
-          <section class="project-info-center">
-            <h3>Mommy's Little Monster</h3>
-            <hr>
-            <h4>Identity System, Print</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/maroon5.html">
-          <section class="project-info-center">
-            <h3>Maroon 5</h3>
-            <hr>
-            <h4>Print</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/heartland.html">
-          <section class="project-info-center">
-            <h3>Heartland Autobody</h3>
-            <hr>
-            <h4>Web</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/starbucks.html">
-          <section class="project-info-center">
-            <h3>Starbucks</h3>
-            <hr>
-            <h4>Photography, Print</h4>
-          </section>
-        </a>
-        <img src="img/tree.jpg" alt="tree">
-      </div>
-    </div>
-
-    <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
+      <div class="project-info afan">
         <a href="projects/afan.html">
           <section class="project-info-center">
             <h3>Alliance for the Future of <br> Agriculture in Nebraska</h3>
@@ -155,12 +63,12 @@
             <h4>Photography, Print</h4>
           </section>
         </a>
-        <img src="img/tree.jpg" alt="tree">
+        <img src="img/afan-home.jpg" alt="tree">
       </div>
-    </div>
+    </div>  
 
     <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
+      <div class="project-info pups-paws">
         <a href="projects/pups-paws.html">
           <section class="project-info-center">
             <h3>Pup's Paws</h3>
@@ -168,25 +76,77 @@
             <h4>Package</h4>
           </section>
         </a>
-        <img src="img/tree.jpg" alt="tree">
+        <img src="img/pups-paws-home.jpg" alt="tree">
       </div>
     </div>
 
     <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
-        <a href="projects/pinnacle.html">
+      <div class="project-info monster">
+        <a href="projects/monster.html">
           <section class="project-info-center">
-            <h3>Pinnacle Bank Arena</h3>
+            <h3>Mommy's Little Monster</h3>
             <hr>
-            <h4>Mobile</h4>
+            <h4>Print</h4>
           </section>
         </a>
-        <img src="img/tree.jpg" alt="tree">
+        <img src="img/monster-home.jpg" alt="tree">
       </div>
     </div>
-    
+
     <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
+      <div class="project-info heartland">
+        <a href="projects/heartland.html">
+          <section class="project-info-center">
+            <h3>Heartland Autobody</h3>
+            <hr>
+            <h4>Web</h4>
+          </section>
+        </a>
+        <img src="img/heartland-home.jpg" alt="tree">
+      </div>
+    </div>
+
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info starbucks">
+        <a href="projects/starbucks.html">
+          <section class="project-info-center">
+            <h3>Starbucks</h3>
+            <hr>
+            <h4>Photography, Print</h4>
+          </section>
+        </a>
+        <img src="img/starbucks-home.jpg" alt="tree">
+      </div>
+    </div>
+
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info hyvee">
+        <a href="projects/hyvee.html">
+          <section class="project-info-center">
+            <h3>Hy-Vee Floral</h3>
+            <hr>
+            <h4>Photography, Web, Print</h4>
+          </section>
+        </a>
+        <img src="img/hyvee-home.jpg" alt="tree">
+      </div>
+    </div>
+
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info maroon5">
+        <a href="projects/maroon5.html">
+          <section class="project-info-center">
+            <h3>Maroon 5</h3>
+            <hr>
+            <h4>Print</h4>
+          </section>
+        </a>
+        <img src="img/maroon5-home.jpg" alt="tree">
+      </div>
+    </div>
+
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info nra">
         <a href="projects/nra.html">
           <section class="project-info-center">
             <h3>National Rifle Association</h3>
@@ -194,12 +154,25 @@
             <h4>Promotional, Print</h4>
           </section>
         </a>
-        <img src="img/tree.jpg" alt="tree">
+        <img src="img/nra-home.jpg" alt="tree">
       </div>
     </div>
 
     <div class="large-6 medium-6 column clear-padding">
-      <div class="project-info">
+      <div class="project-info shotgun-weddings">
+        <a href="projects/shotgun-weddings.html">
+          <section class="project-info-center">
+            <h3>Shotgun Weddings</h3>
+            <hr>
+            <h4>Print</h4>
+          </section>
+        </a>
+        <img src="img/shotgun-home.gif" alt="tree">
+      </div>
+    </div>
+
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info bebs-jam">
         <a href="projects/bebs-jam.html">
           <section class="project-info-center">
             <h3>Beb's Jam</h3>
@@ -207,12 +180,36 @@
             <h4>Package</h4>
           </section>
         </a>
-        <img src="img/tree.jpg" alt="tree">
+        <img src="img/bebs-jam-home.jpg" alt="tree">
       </div>
     </div>
 
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info greasy-garage">
+        <a href="projects/greasy-garage.html">
+          <section class="project-info-center">
+            <h3>Greasy Garage</h3>
+            <hr>
+            <h4>Print</h4>
+          </section>
+        </a>
+        <img src="img/greasy-garage-home.gif" alt="tree">
+      </div>
+    </div>
 
-
+    <div class="large-6 medium-6 column clear-padding">
+      <div class="project-info pinnacle">
+        <a href="projects/pinnacle.html">
+          <section class="project-info-center">
+            <h3>Pinnacle Bank Arena</h3>
+            <hr>
+            <h4>Mobile</h4>
+          </section>
+        </a>
+        <img src="img/pinnacle-home.jpg" alt="tree">
+      </div>
+    </div>
+    
 
 
     <div class="row">
