--- a/projects/hyvee.html
+++ b/projects/hyvee.html
@@ -44,8 +44,8 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Ad Campaign (Photography, Web, Print)</p>
-        <p>HyVee was looking for a way to appeal to a generation of men who might benefit of some assistance when ordering flowers, Generation X. Using a series of witty taglines will help draw an emotional and humorous connection to a man looking to purchase flowers.</p>
+        <h6>Ad Campaign: </h6><p id="inline-text">Photography, Web, Print</p>
+        <p>Hy-Vee was looking for a way to appeal to a generation of men who might benefit of some assistance when ordering flowers, Generation X. Using a series of witty taglines helped draw an emotional and humorous connection to a man looking to purchase flowers.</p>
       </div>
     </div> 
 
@@ -64,8 +64,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="bebs-jam.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="greasy-garage.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="starbucks.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="maroon5.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
