--- a/projects/pups-paws.html
+++ b/projects/pups-paws.html
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Product Branding and Package Development (Package)</p>
+        <h6>Product Branding and Package Development: </h6><p id="inline-text">Print</p>
         <p>Founded in a small-town shoppe, Pup’s Paws is a newly emerging dog food and supply company that was looking for an identity and packaging system that better expressed their standards. They were looking to attract health concious Millenials by using a natural process to produce all items and food.</p>
       </div>
     </div> 
@@ -51,20 +51,32 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/pups-paws1.jpg" alt="pup's paws">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/pups-paws2.jpg" alt="pup's paws">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/pups-paws3.jpg" alt="pup's paws">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/pups-paws4.jpg" alt="pup's paws">
     </div>
   </div>
 
 
   <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="afan.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="monster.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
