--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -1,4 +1,6 @@
 
+
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -44,7 +46,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Annual Report (Photography, Print)</p>
+        <h6>Annual Report: </h6><p id="inline-text">Photography, Print</p>
         <p>Starbucks, a national coffeehouse chain, was in need of an annual report that reflected the company’s long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40.</p>
       </div>
     </div> 
@@ -52,20 +54,62 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/starbucks1.jpg" alt="starbucks coffee report">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/starbucks2.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks3.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks4.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks5.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks6.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks7.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks8.jpg" alt="starbucks coffee report">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/starbucks9.jpg" alt="starbucks coffee report">
     </div>
   </div>
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="heartland.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="afan.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
