--- a/projects/afan.html
+++ b/projects/afan.html
@@ -44,7 +44,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Promotional Booklet (Photography, Print)</p>
+        <h6>Promotional Booklet: </h6> <p id="inline-text">Photography, Print</p>
         <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan’s knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock to males ranging between ages 18 and 28.</p>
       </div>
       </div>
@@ -53,19 +53,31 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/afan-1.jpg" alt="alliance for the future of agriculture cover">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/afan-2.jpg" alt="alliance for the future of agriculture beef">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/afan-3.jpg" alt="alliance for the future of agriculture pork">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/afan-4.jpg" alt="alliance for the future of agriculture poultry">
     </div>
   </div>
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="starbucks.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>PREVIOUS</h5></a></div>
     <div class="large-6 medium-6 columns"><a href="pups-paws.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
