--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -38,12 +38,12 @@
     </div>
 
     <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+      <div class="large-10 medium-10 large-offset-2 columns"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Label Design (Package)</p>
+        <h6>Label Design: </h6><p id="inline-text">Package</p>
         <p>Beb's Jam was founded in 2010 by a couple in rural Maine. The business started out as a just a hobby and turned into a full-steam-ahead jam producing operation. They wanted to target couples between ages 25 and 50 who were conscious about their health and were looking for unique flavors of jam.</p>
       </div>
     </div> 
@@ -62,8 +62,8 @@
     </div>
   </div>
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="greasy-garage.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
   <footer>
