--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Logo and Style Guide (Identity, Print)</p>
+        <h6>Logo and Style Guide: </h6><p id="inline-text">Print</p>
         <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle.</p>
       </div>
     </div> 
@@ -51,20 +51,40 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/greasy-garage1.jpg" alt="greasy garage logo">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/greasy-garage2.jpg" alt="greasy garage logo">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/greasy-garage3.jpg" alt="greasy garage logo">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/greasy-garage4.jpg" alt="greasy garage logo">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/greasy-garage5.jpg" alt="greasy garage logo">
     </div>
   </div>
 
 
+
+
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="bebs-jam.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
