--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -44,27 +44,53 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Web Layout and Design (Web)</p>
-        <p>Heartland Autobody offers complete collision repair services for all makes and models, foreign or domestic. The current website design is very generic and does not reflect who the company is and what they do. They needed a website that was easily accessible across all platforms and sizes to appeal to the tech-savvy Generation Y.</p>
+        <h6>Web Layout Design: </h6><p id="inline-text">Web</p>
+        <p>Heartland Autobody offers complete collision repair services for all makes and models, foreign or domestic. The current website design is very generic and does not reflect who the company is and what they do. They needed a website that was easily accessible across all platforms and sizes to appeal to the tech-savvy Generation Y. </p>
       </div>
     </div> 
 
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/heartland1.jpg" alt="heartland autobody web">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/heartland2.jpg" alt="heartland autobody web">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/heartland3.jpg" alt="heartland autobody web">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/heartland4.jpg" alt="heartland autobody web">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/heartland5.jpg" alt="heartland autobody web">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/heartland6.jpg" alt="heartland autobody web">
     </div>
   </div>
 
 
+
+
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="maroon5.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="monster.html" class="button expand"><h5>PREVIOUS</h5></a></div>
     <div class="large-6 medium-6 columns"><a href="starbucks.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
