--- a/projects/maroon5.html
+++ b/projects/maroon5.html
@@ -43,8 +43,8 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Tour Booklet (Print)</p>
-        <p>Maroon 5 is a pop music group born and bred in Los Angeles. With their last album, V, the group will embark on a world tour beginning in February 2015. They were looking for a booklet that reflects the group’s personality and offered information regarding the tour. The book needed to reflect the energy of the target audience, Millenials.</p>
+        <h6>Tour Booklet: </h6><p id="inline-text">Print</p>
+        <p>Maroon 5 is a pop music group born and bred in Los Angeles. With their last album, V, the group will embark on a world tour beginning in February 2015. They were looking for a booklet that reflected the group’s personality and offered information regarding the tour. The book needed to capture the energy of the target audience, Millenials.</p>
       </div>
     </div> 
 
@@ -63,8 +63,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="monster.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="heartland.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
