--- a/projects/monster.html
+++ b/projects/monster.html
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Logo and Identity System (Identity, Print)</p>
+        <h6>Logo and Identity System: </h6><p id="inline-text">Print</p>
         <p>Mommy’s Little Monster is a specialty clothing line for children featured at a local boutique. Parents, specifically Millennials who are mothers, are the target audience. The logo and system reflects a child’s personality in that it is playful and youthful, drawing an element of emotion and attracting those fashion conscious mothers.</p>
       </div>
     </div> 
@@ -51,19 +51,31 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/monster1.svg" alt="mommy's little monster">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/monster2.svg" alt="mommy's little monster">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/monster3.svg" alt="mommy's little monster">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/monster-test.jpg" alt="mommy's little monster">
     </div>
   </div>
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="maroon5.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="pups-paws.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="heartland.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
