--- a/projects/nra.html
+++ b/projects/nra.html
@@ -44,7 +44,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Social Activism Campaign, Promotional Design (Promotional, Print)</p>
+        <h6>Social Activism Campaign: <p id="inline-text">Print</p>
         <p>The association was seeking a campaign that would spark interest in the different areas of rifle safety education offered. The target audience, males between ages 18 and 33, are prime to market to due to their eligibility to participate in firearm related activities.</p>
       </div>
     </div> 
@@ -65,8 +65,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="bebs-jam.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="maroon5.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
