--- a/projects/pinnacle.html
+++ b/projects/pinnacle.html
@@ -43,28 +43,36 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Mobile Ticket Application (Mobile)</p>
-        <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets and a mobile application was the way to go. Generation Y, of whom 60% download mobile applications, is the primary audience for this app.</p>
+        <h6>Ticket Application: <p id="inline-text">Mobile</p>
+        <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets a mobile application. Generation Y, of whom 60% download mobile applications, is the primary audience for this application.</p>
       </div>
     </div> 
 
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/pinnacle1.jpg" alt="pinnacle bank arena mobile app">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/pinnacle2.jpg" alt="pinnacle bank arena mobile app">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/pinnacle3.jpg" alt="pinnacle bank arena mobile app">
     </div>
   </div>
 
 
+
+
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="pups-paws.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="greasy-garage.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="afan.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
