--- a/projects/shotgun-weddings.html
+++ b/projects/shotgun-weddings.html
@@ -43,28 +43,28 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Application: </h6><p id="inline-text">Logo (Identity)</p>
-        <p>Shotgun Weddings is a newly emerging company trying to establish themselves within Lincoln, Nebraska. Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y who are most likely to get married under quick circumstances.</p>
+        <h6>Identity: </h6><p id="inline-text">Print</p>
+        <p>Shotgun Weddings is a newly emerging company trying to establish themselves within Lincoln, Nebraska. Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y, who are most likely to get married under quick circumstances.</p>
       </div>
     </div> 
 
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/shotgun1.jpg" alt="shotgun weddings logo">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/shotgun2.jpg" alt="shotgun weddings logo">
     </div>
   </div>
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="greasy-garage.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="monster.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="bebs-jam.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
