Fixing Optimization on Project Pages
Fixed optimization of images on all project pages except NRA and Greasy
Garage, which had separate problems. Fixed button formatting (so it
doesn’t glitch up when hovered over). Made all logo appearances within
project pages link back to the home page.

--- a/projects/afan.html
+++ b/projects/afan.html
@@ -16,7 +16,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo-color.svg" alt="logo"></li>
+          <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -32,7 +32,7 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-12 columns">
         <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h3>
       </div>
@@ -53,25 +53,25 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan-1.jpg" alt="alliance for the future of agriculture cover">
+      <img src="../img/afan1.jpg" alt="alliance for the future of agriculture cover">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan-2.jpg" alt="alliance for the future of agriculture beef">
+      <img src="../img/afan2.jpg" alt="alliance for the future of agriculture beef">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan-3.jpg" alt="alliance for the future of agriculture pork">
+      <img src="../img/afan3.jpg" alt="alliance for the future of agriculture pork">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan-4.jpg" alt="alliance for the future of agriculture poultry">
+      <img src="../img/afan4.jpg" alt="alliance for the future of agriculture poultry">
     </div>
   </div>
 
