--- a/projects/hyvee.html
+++ b/projects/hyvee.html
@@ -16,7 +16,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo-color.svg" alt="logo"></li>
+          <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -32,7 +32,7 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-12 columns">
         <h3 id="project-header">Hy-Vee Floral</h3>
       </div>
@@ -52,16 +52,51 @@
 
   <div class="row">
     <div class="large-12 column medium-12 small-12 project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/hyvee1.jpg" alt="hy-vee floral">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/hyvee2.jpg" alt"hy-vee floral">
     </div>
   </div>
 
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/hyvee3.jpg" alt"hy-vee floral">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/hyvee4.jpg" alt"hy-vee floral">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/hyvee5.jpg" alt"hy-vee floral">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/hyvee6.jpg" alt"hy-vee floral">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/hyvee7.jpg" alt"hy-vee floral">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/hyvee8.jpg" alt"hy-vee floral">
+    </div>
+  </div>
 
   <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="starbucks.html" class="button expand"><h5>PREVIOUS</h5></a></div>
