--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -16,7 +16,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo-color.svg" alt="logo"></li>
+          <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -31,7 +31,7 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-12 columns">
         <h3 id="project-header">Greasy Garage</h3>
       </div>
@@ -51,13 +51,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/greasy-garage1.jpg" alt="greasy garage logo">
+      <img src="../img/greasy-garage1.svg" alt="greasy garage logo">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/greasy-garage2.jpg" alt="greasy garage logo">
+      <img src="../img/greasy-garage2.svg" alt="greasy garage logo">
     </div>
   </div>
 
