--- a/projects/nra.html
+++ b/projects/nra.html
@@ -17,7 +17,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo-color.svg" alt="logo"></li>
+          <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -32,7 +32,7 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-12 columns">
         <h3 id="project-header">National Rifle Association</h3>
       </div>
