--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -19,7 +19,7 @@
 <nav id="menu">
     <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
         <ul>
-          <li><img src="../img/logo-color.svg" alt="logo"></li>
+          <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
           <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
@@ -34,7 +34,7 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><img src="../img/logo.svg"></div>
+      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-12 columns">
         <h3 id="project-header">Starbucks</h3>
       </div>
@@ -108,8 +108,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="heartland.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
