--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -31,8 +31,8 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
-      <div class="large-10 medium-10 small-12 columns">
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Greasy Garage</h3>
       </div>
     </div>
@@ -51,13 +51,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/greasy-garage1.svg" alt="greasy garage logo">
+      <img src="../img/greasy-garage1.png" alt="greasy garage logo">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/greasy-garage2.svg" alt="greasy garage logo">
+      <img src="../img/greasy-garage2.png" alt="greasy garage logo">
     </div>
   </div>
 
@@ -69,13 +69,13 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/greasy-garage4.jpg" alt="greasy garage logo">
+      <img src="../img/greasy-garage4.png" alt="greasy garage logo">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/greasy-garage5.jpg" alt="greasy garage logo">
+      <img src="../img/greasy-garage5.png" alt="greasy garage logo">
     </div>
   </div>
 
