--- a/projects/nra.html
+++ b/projects/nra.html
@@ -32,8 +32,8 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
-      <div class="large-10 medium-10 small-12 columns">
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">National Rifle Association</h3>
       </div>
     </div>
@@ -52,13 +52,25 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/nra1.jpg" alt="national rifle association">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/tree.jpg" alt="tree">
+      <img src="../img/nra2.jpg" alt="national rifle association">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/nra3.jpg" alt="national rifle association">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img src="../img/nra4.jpg" alt="national rifle association">
     </div>
   </div>
 
