--- a/index.html
+++ b/index.html
@@ -32,15 +32,12 @@
 
 
 
-   <div class="row hide-for-small-only">
-      <div class="large-8 medium-8 large-offset-1 medium-offset-1 columns">
+   <div class="row">
+      <div class="large-8 medium-8 large-offset-1 medium-offset-1 small-2 logo columns">
         <img src="img/logo.svg" alt="logo">
       </div>
-    </div> 
 
-
-    <div class="row">
-      <div class="large-5 medium-5 large-offset-6 medium-offset-6 columns end the-passion">
+      <div class="large-5 medium-5 large-offset-6 medium-offset-6 small-10 columns end the-passion">
         <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—edition<b>h</b>.</p>
       </div>
     </div> 
@@ -58,7 +55,7 @@
       <div class="project-info afan">
         <a href="projects/afan.html">
           <section class="project-info-center">
-            <h3>Alliance for the Future of <br> Agriculture in Nebraska</h3>
+            <h3>Alliance for the Future of Agriculture in Nebraska</h3>
             <hr>
             <h4>Photography, Print</h4>
           </section>
@@ -89,7 +86,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/monster-home.jpg" alt="tree">
+        <img src="img/monster-home.svg" alt="tree">
       </div>
     </div>
 
@@ -167,7 +164,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/shotgun-home.gif" alt="tree">
+        <img src="img/shotgun-home.svg" alt="tree">
       </div>
     </div>
 
@@ -193,7 +190,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/greasy-garage-home.gif" alt="tree">
+        <img src="img/greasy-garage-home.png" alt="tree">
       </div>
     </div>
 
