--- a/projects/afan.html
+++ b/projects/afan.html
@@ -32,8 +32,8 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
-      <div class="large-10 medium-10 small-12 columns">
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h3>
       </div>
     </div>
@@ -53,13 +53,14 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
+            <!--<img data-interchange="[../img/afan1.jpg, (medium)], [../img/afan1-small.jpg, (small)]"> -->
       <img src="../img/afan1.jpg" alt="alliance for the future of agriculture cover">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan2.jpg" alt="alliance for the future of agriculture beef">
+      <img src="../img/afan2.jpg" alt="alliance for the future of agriculture beef"> 
     </div>
   </div>
 
