--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -31,14 +31,14 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
-      <div class="large-10 medium-10 small-12 columns">
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Beb's Jam</h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="large-10 medium-10 large-offset-2 columns"><hr></div>
+      <div class="large-12 medium-12 columns"><hr></div>
     </div>
 
     <div class="row">
