--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -32,8 +32,8 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
-      <div class="large-10 medium-10 small-12 columns">
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Heartland Autobody</h3>
       </div>
     </div>
